Optimize native planner aggregate and map consumers
Extend consumer-scoped native evaluation for aggregate/list consumers, list concatenation, maps, folds, and equality. Preserve CEL construction order and exceptional-value semantics while avoiding intermediate CEL collections on supported paths.